# xpu_1

./: .gitmodules  Cargo.toml  INTEGRATION.md  README.md  WORKFLOW.md  architecture_analysis.md  build.sbt  core_features.md  hardware_design_tools.md
.github/workflows/: xpu.yaml
benches/: benchmark.rs
hardware/src/main/scala/xpu/core/: TransformerCore.scala
hardware/src/main/scala/xpu/memory/: MemorySystem.scala
hardware/src/main/scala/xpu/network/: MeshNetwork.scala
hardware/src/main/scala/xpu/power/: DVFSController.scala  PowerGating.scala  PowerManagement.scala
hardware/src/main/scala/xpu/robotics/: RoboticsProcessor.scala
hardware/src/main/scala/xpu/security/: KyberKEM.scala  NTTProcessor.scala  SecureNetworkProtocol.scala  TrustedExecutionEnvironment.scala
src/: adaptive_optimization.rs  cloud_offloading.rs  cluster_management.rs  distributed_memory.rs  historical_data.rs  lib.rs  main.rs  memory_management.rs  ml_models.rs  power_management.rs  profiling.rs  resource_monitoring.rs  scaling.rs  task_data.rs  task_scheduling.rs  xpu_optimization.rs
src/cli/: main.rs
src/cpu/: core.rs
src/fpga/: core.rs
src/gpu/: core.rs
src/lpu/: core.rs
src/npu/: core.rs
src/tpu/: core.rs
src/vpu/: core.rs
tests/: cli_tests.rs  integration_tests.rs  test_helpers.rs  xpu_optimizer_tests.rs
