[package]
name = "xpu_1"
version = "0.0.1"
edition = "2024"
authors = ["kasinadhsarma,kasinadhsarma@gmail.com"]
license = "MIT"

[dependencies]
rayon = "1.5"
ndarray = "0.15"
log = "0.4"
env_logger = "0.9"
thiserror = "1.0"
petgraph = "0.6"
rand = "0.8"
crossbeam = "0.8"
ndarray-stats = "0.5"
argon2 = "0.5"
jsonwebtoken = "8.3"
chrono = "0.4"
google-cloud-sdk = "0.1"
kubernetes = "0.15"
tch = "0.7"
scikit-learn = "0.24"
power-management = "0.2"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
criterion = "0.3"

[dependencies.cuda]
version = "0.3"
optional = true

[dependencies.tensorflow]
version = "0.17"
optional = true

[dependencies.tch]
version = "0.7"
optional = true

[dependencies.slurm_rs]
version = "0.1"
optional = true

[dependencies.k8s-openapi]
version = "0.15"
optional = true

[features]
default = []
cuda_support = ["cuda"]
tensorflow_support = ["tensorflow"]
pytorch_support = ["tch"]
slurm_support = ["slurm_rs"]
kubernetes_support = ["k8s-openapi"]

[lib]
name = "xpu_optimization"
path = "src/lib.rs"

[[bin]]
name = "xpu_optimizer"
path = "src/main.rs"
